fix modal z-index

--- a/app/javascript/packs/stylesheets/advanced_filter.scss
+++ b/app/javascript/packs/stylesheets/advanced_filter.scss
@@ -1,10 +1,3 @@
-.advanced-filter-modal-container {
-  // The aggressive z-index ensures that this modal
-  // will be drawn in front of any other modals except the confirm-dialog box
-  background-color: rgba(20, 20, 20, 0.60);
-  z-index: 1999;
-}
-
 .modal-af {
   width: 1100px !important;
   max-width: 1100px !important;
